Fixed mobile view styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="logo/abrar_logo.png">
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="logo/abrar_logo.png">
+    <link rel="stylesheet" href="css/index.css">
     <title>Text Counter</title>
 </head>
 
@@ -17,8 +17,8 @@
     <h1 class="mainHeader">
         Text Counter
     </h1>
-    <div id="container" class="center">
-        <textarea name="textarea" id="textarea" cols="100" rows="10"
+    <div class="center">
+        <textarea name="textarea" id="textarea" class="form-control" rows="7"
             placeholder="Hover in or out to see changes without clicking!"></textarea>
         <br>
         <h2 id="charDisplay">Characters: </h2>
