Removed the button as the count will change with input now and added a media query for bigger displays

--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
     <h1 class="mainHeader">
         Text Counter
     </h1>
-    <div class="center">
+    <div class="center form-group">
         <textarea name="textarea" id="textarea" class="form-control" rows="7"
-            placeholder="Hover in or out to see changes without clicking!"></textarea>
+            placeholder="Enter some characters here to begin counting!"></textarea>
         <br>
-        <h2 id="charDisplay">Characters: </h2>
-        <h2 id="byteDisplay">Bytes: </h2>
-    </div>
-    <div class="action">
-        <button id="button" class="btn">Count!</button>
+        <h2 id="charDisplay"></h2>
+        <h2 id="byteDisplay"></h2>
     </div>
     <div id="footer">
         <p>Author: </p>
