Added Word Count

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <br>
         <h2 id="charDisplay"></h2>
         <h2 id="byteDisplay"></h2>
+        <h2 id="wordDisplay"></h2>
     </div>
     <div id="footer">
         <p>Author: </p>
