Implemented a light mode

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Text Counter</title>
 </head>
 
-<body>
+<body id="body">
+    <button id="theme-toggle" class="btn" data-toggle="tooltip" title="Switch Theme"></button>
     <h1 class="mainHeader">
         Text Counter
     </h1>
