Added a random character generator

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <h2 id="wordDisplay"></h2>
         </div>
     </div>
+    <div class="center form-group">
+        <label class=".label" for="gen-text-input">Generate Random Character Sequence of a particular length</label>
+        <input class="form-control" id="gen-text-input" type="number" placeholder="Enter length here">
+        <br/>
+        <button id="gen-text" class="btn" onclick="setRandomTextInTextArea()">Generate Random Text</button>
+    </div>
     <div id="footer">
         <p id="footer-text"></p>
         <button id="github" class="btn btn-github" data-toggle="tooltip" title="https://github.com/abrarhayat">
