--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <button id="clear" class="btn" onclick="clearText()">Clear Text</button>
     </div>
     <div id="footer">
-        <p id="footer-text"></p>
+        <p id="footer-text" data-toggle="tooltip" title="https://abrarhayat.vercel.app"></p>
         <button id="github" class="btn btn-github" data-toggle="tooltip" title="https://github.com/abrarhayat">
             <i class="fa fa-github" aria-hidden="true"></i>
             Abrar Hayat</button>
@@ -47,8 +47,9 @@
         <button id="instagram" class="btn btn-github" data-toggle="tooltip" title="abrarhayat">
             <i class="fa fa-instagram" aria-hidden="true"></i> abrarhayat</button>
     </div>
+    <script src="js/popper.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/bootstrap.min"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 
