Added new meta info

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Text Counter</title>
+    <title>Text Counter and Generator</title>
+    <meta name="description" content="Generate Random Text and Count the characters and byte counts of a given text">
+    <meta name="keywords" content="text counter, byte counter, text generator, random text, Abrar Hayat">
 </head>
 
 <body id="body">
