Improved button event listeners

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <input class="form-control" id="gen-text-input" type="number" maxlength="6" placeholder="Enter length here"
             oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
         <br />
-        <button id="gen-text" class="btn" onclick="setRandomTextInTextArea()">Generate Random Text</button>
-        <button id="copy" class="btn" onclick="copyToClipboard()">Copy to clipboard</button>
-        <button id="clear" class="btn" onclick="clearText()">Clear Text</button>
+        <button id="gen-text" class="btn">Generate Random Text</button>
+        <button id="copy" class="btn">Copy to clipboard</button>
+        <button id="clear" class="btn">Clear Text</button>
     </div>
     <div id="footer">
         <p id="footer-text" data-toggle="tooltip" title="https://abrarhayat.vercel.app"></p>
