Added spellcheck for english

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Text Counter
     </h1>
     <div class="center form-group">
-        <textarea name="textarea" id="textarea" class="form-control" rows="5" cols="500"
+        <textarea spellcheck="true" lang="en" name="textarea" id="textarea" class="form-control" rows="5" cols="500"
             placeholder="Enter some characters here to begin counting!"></textarea>
         <br>
         <div class="display">
